solved more styling issues. Logo on table will not align porperly, I believe it is more to do with the Avatar package, need to dig in more

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -184,14 +184,17 @@ tr td:last-child {
 }
 
 .license-item {
-	width: 85px;
 	height: 22px;
+	min-width: 85px;
+	max-width: 85px;
+	padding-right: 10px;
+	padding-left: 10px;
 	border-radius: 8px;
+	margin: auto;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	padding-top: 1px;
 }
 
 .license-4 {
@@ -362,6 +365,14 @@ tr td:last-child {
 	height: 25px;
 }
 
+.series-table-header-license {
+	width: 90px;
+}
+
+.series-table-header-logo {
+	width: 90px;
+}
+
 .series-table-header-long {
 	text-align: left;
 }
@@ -372,6 +383,12 @@ tr td:last-child {
 
 .series-table-item-alt {
 	background-color: rgba(162, 172, 185, 0.1);
+}
+
+.series-table-item-logo {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
 }
 
 .standard-divider {
